[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]

adt = { path = "../adt" }
common = { path = "../common" }
tokio = { version = "1.17", features = ["full", "tracing"] }
byteorder = "1.4.3"
serde = { version = "1.0.136", features = ["derive", "rc"] }
project-root = "0.2.2"
serde_json = "1.0.79"
csv = "1.1.6"
static_assertions = "1.1.0"
json = "0.12.4"
log = "0.4.16"
env_logger = "0.9.0"
rand = "0.8.5"
ordered-float = "2.10.0"
tempfile = "3.3.0"
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.14"
console-subscriber = "0.1.6"
roaring = "0.8.1"
async-recursion = "1.0.0"
async-trait = "0.1.53"
crc = "3.0"
walkdir = "2.3.2"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
async-channel = "1.6.1"
scc = "0.8.3"
atomic = "0.5.1"
futures = "0.3.21"
bincode = "1.3.3"
act-zero = "0.4.0"
async_fn = "0.0.2"
tide = "0.16.0"
tracing-appender = "0.2"

